test/integration/bad/declare-define-var-double-4.stan
data {
  array[2] real a1;
}
parameters {
  real y;
  real a2 = 1.0; // cannot assign in parameters block
}
model {
  y ~ normal(0,1);
}

